# E-ledger.India

./: .dockerignore  .env.example  ARCHITECTURE.md  App.tsx  BLOCKCHAIN_ARCHITECTURE.md  BLOCKCHAIN_README.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MVP_CHECKLIST.md  Makefile  README.md  cloudformation.yaml  constants.ts  docker-compose.dev.yml  docker-compose.yml  healthcheck.js  index.html  metadata.json  package.json  setup.bat  setup.sh  setup_and_push.bat  setup_and_push.ps1  types.ts  verify_push.ps1
backend/: .env  Dockerfile  Dockerfile.dev  README.md  SUPABASE_INTEGRATION.md  package-demo.json  package.json  server-architecture.js  server-core.js  server.js  tsconfig.json
backend/blockchain/: api.js  core.js  crypto.js
backend/src/: app.module.ts  main.ts  server.js
blockchain-engine/rust-core/: Cargo.toml  Dockerfile
blockchain-engine/rust-core/src/: auth.rs  blockchain.rs  lib.rs  main.rs
blockchain/api/: index.ts
components/: Assistant.tsx  BatchLabel.tsx  BatchManager.tsx  BlockchainExplorer.tsx  Dashboard.tsx  DistributorDashboard.tsx  ERPManager.tsx  ERPModule.tsx  FinancialRecords.tsx  LandingPage.tsx  Layout.tsx  Login.tsx  Logo.tsx  NetworkDirectory.tsx  PrintableInvoice.tsx  ProductVerifier.tsx  QRScanner.tsx  RetailerDashboard.tsx  SSCCLabel.tsx  SSCCManager.tsx  Signup.tsx  SystemSettings.tsx  TraceVisualizer.tsx  TransferModal.tsx  UserProfile.tsx  VRSManager.tsx
monitoring/: prometheus.yml
nginx/: nginx.conf
services/: authService.ts  erpService.ts  geminiService.ts  ledgerService.ts  thirdPartyIntegrationService.ts
(+63 files in other folders)
